--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>image finder</title>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section>
-      
+      <form class="search-form" id="search-form">
+        <input
+          value="cat"
+          type="text"
+          name="query"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+      </form>
+      <ul class="gallery" id="gallery">
+        <!-- разделитель -->
+        <i class="material-icons">thumb_up</i>
+
+        <i class="material-icons">visibility</i>
+
+        <i class="material-icons">comment</i>
+
+        <i class="material-icons">cloud_download</i>
+
+        <!-- Список <li> с карточками изображений -->
+      </ul>
     </section>
     <script src="index.js"></script>
   </body>
